[package]
name = "gru-opengl"
version = "0.1.0"
authors = ["Jannik Fehre", "Fabian Osyguß"]
license = "MIT"
edition = "2024"

[features]
loading = []
storage = []
resource = ["loading", "gltf", "image", "rodio"]
ui = ["gru-ui"]

[dependencies]
winit = "0.26.0"
glow = "0.12.2"
gru-misc = { git = "https://github.com/Osyfe/gru-misc.git", features = ["math"] }
gru-ui = { git = "https://github.com/Osyfe/gru-ui.git", optional = true }
ahash = { version = "0.8.11", default-features = false, features = ["no-rng", "std", "serde"] }
gltf = { version = "1.2.0", default-features = false, features = ["names"], optional = true }
image = { version = "0.25.5", default-features = false, features = ["png"], optional = true }

# desktop
[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
raw-gl-context = "0.1.2"
bincode = "1.3.3"
rodio = { version = "0.20.1", default-features = false, features = ["vorbis"], optional = true }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.64", features = ["Window", "Document", "Element", "HtmlCanvasElement", "WebGlRenderingContext", "WebGlBuffer", "WebGlShader", "WebGlProgram", "Performance", "XmlHttpRequest", "XmlHttpRequestResponseType", "Storage"] }
rodio = { version = "0.20.1", default-features = false, features = ["vorbis", "wasm-bindgen"], optional = true }
